collapse fixed

--- a/src/styles/sections/_faq.scss
+++ b/src/styles/sections/_faq.scss
@@ -54,6 +54,7 @@
     font-family: 'ALS Schlange sans';
     font-size: 1.8rem;
     line-height: 100%;
+    cursor: pointer;
     color: $main;
     background: none;
     outline: none;
